deployments/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-santa-deployment
  namespace: cad
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-santa
  template:
    metadata:
      labels:
        app: nginx-santa
    spec:
      containers:
      - name: nginx-santa
        image: finnbogi/santa:0.4
        ports:
        - containerPort: 80
