deployments/demo/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: santa-container
  namespace: cad
  labels:
    name: santa-container
spec:
  containers:
  - name: santa-container
    image: finnbogi/santa:0.7.1
    ports:
      - containerPort: 80
