deployments/demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-santa-service
  namespace: cad
spec:
  selector:
    app: nginx-santa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
