deployments/demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: santa-tls-ingress
  namespace: cad
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: santa.gitops.dk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-santa-service
                port:
                  number: 80
  tls:
    - secretName: santa-tls
      hosts:
        - santa.gitops.dk
